--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.21",
+    "@tamagui/config": "^1.132.12",
+    "@tamagui/font-inter": "^1.132.12",
+    "@tamagui/shorthands": "^1.132.12",
+    "@tamagui/themes": "^1.132.12",
     "convex": "^1.25.4",
     "expo": "^53.0.20",
     "expo-blur": "~14.1.5",
@@ -46,7 +50,8 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tamagui": "^1.132.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
