--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.11",
     "@clerk/clerk-react": "^5.37.0",
+    "@clerk/clerk-sdk-node": "^4.13.23",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/ionicons": "^12.2.0",
@@ -51,6 +52,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "svix": "^1.69.0",
     "tamagui": "^1.132.12"
   },
   "devDependencies": {
