--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.14.11",
     "@clerk/clerk-react": "^5.37.0",
-    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/clerk-sdk-node": "^5.1.6",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-vector-icons/ionicons": "^12.2.0",
@@ -34,6 +34,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.4",
     "expo-secure-store": "~14.2.3",
@@ -56,8 +57,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "svix": "^1.69.0",
-    "tamagui": "^1.132.12",
-    "expo-image-picker": "~16.1.4"
+    "tamagui": "^1.132.12"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
